log
ju., 21 de abr. de 2022 15:43:14: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:42:16: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     tM -> root = lower_than;
                ^
treemap.c:43:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     tM -> current = lower_than;
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
b1fc42d
ju., 21 de abr. de 2022 15:44:23: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:42:15: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     int aux = lower_than;
               ^~~~~~~~~~
treemap.c:43:16: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     tM -> root = aux;
                ^
treemap.c:44:19: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     tM -> current = aux;
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
1948510
ju., 21 de abr. de 2022 15:57:29: 
 treemap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  3|8
total_score: 0/70
2392ba5
